--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,17 @@
 server:
-   port: 9000
+   port: 8000
 spring:
    kafka:
-      bootstrap-servers: localhost:9092
+      bootstrap-servers: localhost:9000
       topic-name: topic1
       topic-name2: topic2
-      new-topic-name: new-topic1
-      new-topic-name2: new-topic2
-      new-topic-name3: new-topic3
       producer:
          key-serializer: org.apache.kafka.common.serialization.StringSerializer
          value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       consumer:
-         group-id: group1
+         group-id: group
+         group-id1: group1
+         group-id2: group2
          auto-offset-reset: earliest
+         key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+         value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
